--- a/views/forms/addpost.hbs
+++ b/views/forms/addpost.hbs
@@ -2,9 +2,26 @@
 	<h1 class="text-2xl font-bold text-center">Add Post</h1>
 	<form action="/addpost" method="post" class="space-y-6 ng-untouched ng-pristine ng-valid">
 		<div class="space-y-1 text-sm">
-			<label for="name" class="block text-gray-600">Name</label>
-			<input type="text" name="name" id="name" placeholder="name" class="w-full px-4 py-3 rounded-md border-gray-300 bg-gray-50 text-gray-800 focus:border-violet-600">
 		</div>
-		<button type="submit" class="block w-full p-3 text-center rounded-sm text-gray-50 bg-violet-600">Sign in</button>
+		<div class="flex flex-col w-full">
+
+			<label for="name" class="block text-gray-600">Function</label>
+			<input type="text" name="name" id="name" placeholder="Name" class="my-5 w-full px-4 py-3 rounded-md border-gray-300 bg-gray-50 text-gray-800 focus:border-violet-600">
+
+			<label for="Frontend" class="block text-gray-600">Frontend</label>
+			<textarea rows="3" id="Frontend" name="frontend" placeholder="Frontend..." class="my-3 p-4 rounded-md resize-none text-gray-800 bg-gray-50"></textarea>
+
+			<label for="Backend" class="block text-gray-600">Backend</label>
+			<textarea rows="3" id="Backend" name="backend" placeholder="Backend..." class="my-3 p-4 rounded-md resize-none text-gray-800 bg-gray-50"></textarea>
+
+			<label for="Database Schema" class="block text-gray-600">Database Schema</label>
+			<textarea rows="3" name="schema" id="Database Schema" placeholder="Database Schema..." class="my-3 p-4 rounded-md resize-none text-gray-800 bg-gray-50"></textarea>
+
+			<label for="Linking" class="block text-gray-600">Linking</label>
+			<textarea rows="3" name="linking" id="Linking" placeholder="Linking..." class="my-3 p-4 rounded-md resize-none text-gray-800 bg-gray-50"></textarea>
+
+			<button type="submit" class="py-4 my-8 font-semibold rounded-md text-gray-50 bg-violet-600">Add Post</button>
+		</div>
+
 	</form>
 </div>
