--- a/views/layout/layout.hbs
+++ b/views/layout/layout.hbs
@@ -49,7 +49,8 @@
     <link rel="stylesheet" href="/stylesheets/style.css">
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
- 
+    <script src="dist/clipboard.min.js"></script>
+
 </head>
 
 <body>
@@ -71,7 +72,7 @@
 
 
     <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->    
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
 </body>
 
 </html>
