--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -33,6 +33,7 @@
     font-size: 1rem;
     font-weight: bold;
     text-transform: uppercase;
+    z-index: 1000;
   }
 
 
@@ -42,6 +43,7 @@
     justify-content: space-between;
     align-items: center;
     padding-top: 20px;
+    z-index:1000;
   }
 
   .logo {
@@ -70,6 +72,7 @@
     top: 5rem;
     left: 18px;
     background-color: lightblue;
+    z-index: 9999 !important;
   }
 
   .nav__link a {
@@ -97,7 +100,7 @@
 
     .nav__link a {
       display: inline-block;
-      padding: 15px 20px;
+      padding: 10px 10px;
     }
 
     .hamburger {
