--- a/views/forms/addpost.hbs
+++ b/views/forms/addpost.hbs
@@ -1,5 +1,5 @@
 <div class="w-full p-8 mb-16 space-y-3 rounded-xl bg-white text-gray-800">
-	<h1 class="text-2xl font-bold text-center">Add Snippet</h1>
+	<h1 class="text-2xl font-bold text-center">Add Code</h1>
 	<form action="/addpost" method="post" class="space-y-6 ng-untouched ng-pristine ng-valid">
 		
 		<div class="flex flex-col w-full">
@@ -22,7 +22,7 @@
 			<label for="Linking" class="block text-gray-900 font-bold">Linking</label>
 			<textarea rows="10" name="linking" id="Linking" placeholder="Linking..." class="my-3 p-4 rounded-md resize-none text-gray-800 bg-gray-50"></textarea>
 
-			<button type="submit" class="py-4 my-8 font-semibold rounded-md text-gray-50 bg-violet-600">Add Post</button>
+			<button type="submit" class="py-4 my-8 font-semibold rounded-md text-gray-50 bg-violet-600">Add Code</button>
 		</div>
 
 	</form>
