--- a/views/forms/addpost.hbs
+++ b/views/forms/addpost.hbs
@@ -3,6 +3,7 @@
 	<form action="/addpost" method="post" class="space-y-6 ng-untouched ng-pristine ng-valid">
 		
 		<div class="flex flex-col w-full">
+			<input type="text" name="type" value="snippet" hidden>
  
 			<label for="name" class="block text-gray-900 font-bold">Function</label>
 			<input type="text" name="name" id="name" placeholder="Name" class="my-5 w-full px-4 py-3 rounded-md border-gray-300 bg-gray-50 text-gray-800 focus:border-violet-600">
