--- a/views/pages/snippet.hbs
+++ b/views/pages/snippet.hbs
@@ -1,6 +1,6 @@
-<div id="alert-2" class="fixed bottom-10 flex px-24 p-4 bg-red-100 rounded-lg dark:bg-red-200 h-12" role="alert">
+<div id="alert-2" class="fixed bottom-10 flex px-24 p-4 bg-green-100 rounded-lg dark:bg-red-200 h-12" role="alert">
     <span class="sr-only">Info</span>
-    <div class="ml-3 text-sm font-medium text-red-700 dark:text-red-800">
+    <div class="ml-3 text-sm font-medium text-green-700 dark:text-red-800">
         Copied to clipboard
     </div>
 </div>
