--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -12,7 +12,7 @@
     <a class="item" href="/addpost">Add Snippet</a>
     <a class="item" href="/addcode">Add Code</a>
     <a class="item" href="/docs">Docs</a>
-    <a class="item" href="/about">About</a>
+    <a class="item" href="/admin">Admin</a>
   </div>
 </nav>
 
